src/objects/Install__c.object
<CustomObject>
    <fields>
        <fullName>ACH_Reduction__c</fullName>
        <formula>(Pre_Install_CFM_50__c -  Post_Install_CFM_50__c )/Pre_Install_CFM_50__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACH Reduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Attic_Square_Footage__c</fullName>
        <label>Attic Square Footage</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auditor_or_Contractor__c</fullName>
        <label>Auditor or Contractor</label>
        <picklist>
            <picklistValues>
                <fullName>Auditor Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor Install</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CARE_Program_Cost__c</fullName>
        <formula>Install_Cost__c -  Total_Value_of_Rebates_Earned__c - Total_Leveraged_Funding_Utilitized__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CARE Program Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractor</label>
        <referenceTo>Contractor__c</referenceTo>
        <relationshipLabel>Installs</relationshipLabel>
        <relationshipName>Installs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_CAC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has CAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Square_Footage__c</fullName>
        <label>Home Square Footage</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_not_installed_reason_why__c</fullName>
        <label>If not installed, reason why</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Cost__c</fullName>
        <label>Install Cost</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install_Notes__c</fullName>
        <label>Install Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Type__c</fullName>
        <label>Install Type</label>
        <picklist>
            <picklistValues>
                <fullName>Belly/Burrito Insulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crawlspace Insulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Insulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furnace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-Flow Fixture - Bathroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-Flow Fixture - Kitchen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-Flow Fixture - Showerhead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-Flow Fixture - Package (B, K, SH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attic Insulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duct Insulation and Sealing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipe Insulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rim Insulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wall Insulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programmable Thermostat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Heater Blanket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refrigerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furnace Clean and Tune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Sealing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storm Windows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Ventilation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Heater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Window Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler Clean and Tune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basement Wall Insulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaporative Cooler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LED (A19)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_Condition__c</fullName>
        <label>Post-Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Install_AFUE__c</fullName>
        <label>Post-Install AFUE</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Install_ASHRAE_62_2_followed__c</fullName>
        <label>Post-Install ASHRAE 62.2 followed</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Install_CFM_50__c</fullName>
        <label>Post-Install CFM 50</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Install_EF_Value__c</fullName>
        <label>Post-Install EF Value</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Install_Energy_Star__c</fullName>
        <label>Post-Install Energy Star?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_Install_GPM__c</fullName>
        <label>Post-Install GPM</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Install_Lightbulb_Type__c</fullName>
        <label>Post-Install Lightbulb Type</label>
        <picklist>
            <picklistValues>
                <fullName>Incandescent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_Install_Motor_Details__c</fullName>
        <label>Post-Install Motor Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Install_Number_of_Storm_Windows_Ins__c</fullName>
        <inlineHelpText>Post-Install Number of Storm Windows Installed</inlineHelpText>
        <label>Post-Install Number of Storm Windows Ins</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Install_R_Value__c</fullName>
        <label>Post-Install R Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Install_Reduction_in_Air_Leakage__c</fullName>
        <label>Post-Install Reduction in Air Leakage</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Post_Install_Thermostat_Type__c</fullName>
        <label>Post-Install Thermostat Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programmable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_Install_Wattage__c</fullName>
        <label>Post-Install Wattage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Condition__c</fullName>
        <label>Pre-Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Install_AFUE__c</fullName>
        <label>Pre-Install AFUE</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Install_CFM_50__c</fullName>
        <label>Pre-Install CFM 50</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Install_Energy_Star__c</fullName>
        <label>Pre-Install Energy Star?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Install_GPM__c</fullName>
        <label>Pre-Install GPM</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Install_Lightbulb_Type__c</fullName>
        <label>Pre-Install Lightbulb Type</label>
        <picklist>
            <picklistValues>
                <fullName>Incandescent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Install_Motor_Type__c</fullName>
        <label>Pre-Install Motor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Motor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Install_R_Value__c</fullName>
        <label>Pre-Install R Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Install_Refrigerator_Make__c</fullName>
        <label>Pre-Install Refrigerator Make</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Install_Refrigerator_Model__c</fullName>
        <label>Pre-Install Refrigerator Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Install_Refrigerator_Year__c</fullName>
        <label>Pre-Install Refrigerator Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Install_Thermostat_Type__c</fullName>
        <label>Pre-Install Thermostat Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programmable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Install_Wattage__c</fullName>
        <label>Pre-Install Wattage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Install_Window_Type__c</fullName>
        <label>Pre-Install Window Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single-Pane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double-Pane</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Per_ASHRAE_62_2_2010_calculation__c</fullName>
        <label>Pre- Per ASHRAE 62.2-2010 calculation</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Installs</relationshipLabel>
        <relationshipName>Installs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity of Installs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_of_Items_Installed__c</fullName>
        <label>Quantity of Items Installed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Square_footage_of_Wall_Insulation__c</fullName>
        <label>Square footage of Wall Insulation</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Leveraged_Funding_Utilitized__c</fullName>
        <label>Total Leveraged Funding Utilitized</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Rebates_Earned__c</fullName>
        <label>Total Number of Rebates Earned</label>
        <summarizedField>Rebate__c.Quantity_of_Rebates_WFR__c</summarizedField>
        <summaryForeignKey>Rebate__c.Install__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Rebates_Earned__c</fullName>
        <label>Total Rebates Earned</label>
        <summarizedField>Rebate__c.Total_Value_Rebates_Earned_for_Rollup__c</summarizedField>
        <summaryFilterItems>
            <field>Rebate__c.Eligible_Rebate__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Rebate__c.Install__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_Rebates_Earned__c</fullName>
        <label>Total Value of Rebates Earned</label>
        <summarizedField>Rebate__c.Total_Value_Rebates_Earned_for_Rollup__c</summarizedField>
        <summaryForeignKey>Rebate__c.Install__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Completed</label>
        <type>Checkbox</type>
    </fields>
    <label>Install</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_for_Verify_Issue</fullName>
        <columns>NAME</columns>
        <columns>Install_Type__c</columns>
        <columns>Quantity__c</columns>
        <columns>Install_Cost__c</columns>
        <columns>Total_Number_of_Rebates_Earned__c</columns>
        <columns>Total_Rebates_Earned__c</columns>
        <columns>CARE_Program_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>VERIFY</value>
        </filters>
        <label>All for Verify Issue</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PROJECT_000001</fullName>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Install_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Auditor_or_Contractor__c</columns>
        <columns>Contractor__c</columns>
        <columns>Quantity__c</columns>
        <columns>Install_Cost__c</columns>
        <columns>Total_Number_of_Rebates_Earned__c</columns>
        <columns>Total_Rebates_Earned__c</columns>
        <columns>CARE_Program_Cost__c</columns>
        <columns>Total_Leveraged_Funding_Utilitized__c</columns>
        <columns>Install_Notes__c</columns>
        <columns>Pre_Condition__c</columns>
        <columns>Post_Condition__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Project-000001</value>
        </filters>
        <label>PROJECT-000001</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PROJECT_000007</fullName>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Install_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Auditor_or_Contractor__c</columns>
        <columns>Contractor__c</columns>
        <columns>Quantity__c</columns>
        <columns>Install_Cost__c</columns>
        <columns>Total_Number_of_Rebates_Earned__c</columns>
        <columns>Total_Rebates_Earned__c</columns>
        <columns>CARE_Program_Cost__c</columns>
        <columns>Total_Leveraged_Funding_Utilitized__c</columns>
        <columns>Install_Notes__c</columns>
        <columns>Pre_Condition__c</columns>
        <columns>Post_Condition__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Project-000007</value>
        </filters>
        <label>PROJECT-000007</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Install Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installs</pluralLabel>
    <recordTypes>
        <fullName>Air_Sealing</fullName>
        <active>true</active>
        <label>Air Sealing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fuel_Use</fullName>
        <active>true</active>
        <label>Fuel Use</label>
    </recordTypes>
    <recordTypes>
        <fullName>Insulation</fullName>
        <active>true</active>
        <label>Insulation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Complete</fullName>
        <active>true</active>
        <label>Job Complete</label>
    </recordTypes>
    <recordTypes>
        <fullName>Light_Bulb</fullName>
        <active>true</active>
        <label>Light Bulb</label>
    </recordTypes>
    <recordTypes>
        <fullName>Low_Flow</fullName>
        <active>true</active>
        <label>Low Flow</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Install</fullName>
        <active>true</active>
        <label>Master Install</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Programmable_Thermostat</fullName>
        <active>true</active>
        <label>Programmable Thermostat</label>
    </recordTypes>
    <recordTypes>
        <fullName>Refrigerator</fullName>
        <active>true</active>
        <label>Refrigerator</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ventilation</fullName>
        <active>true</active>
        <label>Ventilation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Water_Heater</fullName>
        <active>true</active>
        <label>Water Heater</label>
    </recordTypes>
    <recordTypes>
        <fullName>Water_Heater_Blanket</fullName>
        <active>true</active>
        <label>Water Heater Blanket</label>
    </recordTypes>
    <recordTypes>
        <fullName>Windows</fullName>
        <active>true</active>
        <label>Windows</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>